# google-authz

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  pub.yml
examples/: Cargo.toml  Dockerfile  job.yml
examples/src/: gcp.rs  hyper.rs  tonic.rs
src/: client.rs  credentials.rs  lib.rs  service.rs  sync.rs  token.rs
src/auth/: api_key.rs  error.rs  mod.rs
src/auth/oauth2/: http.rs  metadata.rs  mod.rs  service_account.rs  token.rs  user.rs
src/credentials/: error.rs  impls.rs  mod.rs
