[package]
name = "google-authz"
version = "1.0.0-alpha.5"
authors = ["mechiru <u9053u6d41@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "This library provides auto-renewed tokens for Google service authentication."
repository = "https://github.com/mechiru/google-authz"
documentation = "https://docs.rs/google-authz"
categories = ["authentication"]
keywords = ["google", "cloud", "auth", "gcloud", "gcp"]
readme = "README.md"
include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*",
]

[workspace]
members = ["examples"]

[dependencies]
tracing = { version = "0.1", default-features = false, features = ["std"] }
thiserror = "1.0"
parking_lot = "0.12"
futures-util = "0.3"
bytes = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
jsonwebtoken = "8.1"
gcemeta = "0.2"
tower-service = "0.3"
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-rustls = { version = "0.23", default-features = false, features = ["http2"], optional = true }

[dev-dependencies]
tokio = { version = "1.18", features = ["macros"] }

[features]
default = ["native-certs"]
tonic = []
native-certs = ["hyper-rustls/native-tokio"]
webpki-roots = ["hyper-rustls/webpki-tokio"]
